# CASSANDRA

./: .gitignore  AUDIT_ALUR_PIPELINE.md  README.md  TASK_REVIEW.md  daily_news.json  forecast.py  forecast.py#  main.py  orchestrate_pipeline.py  parameter.py  pipeline_output.txt  requirements.txt  restored.py
adapters/: dummy_MetaTrader5.py  mt5_adapter.py
backtest/: Cargo.toml  README.md  __init__.py  docs.md  engine_runner.py  engine_tests.rs  experiments.py  ledger.rs  lib.rs  monitor_bridge.py  orchestrator.py  pyproject.toml  replay.py  runner.rs  simulate_bench.rs
backtest/benches/: simulate_bench.rs
backtest/python/: orchestrator.py
backtest/src/: attribution.rs  engine.rs  ledger.rs  lib.rs  python_bindings.rs  runner.rs  types.rs
backtest/tests/: engine_tests.rs  test_orchestrator_extract_signals.py
data_base/: combined_data_final_complete.csv  combined_data_final_complete.csv_1m.csv
docs/: backtest_implementation_sprint_plan.md  backtest_strategy.md  hf_interrupt_triage_2026-03-27.md
fitted_models/: dcc_garch.py  dcc_garch_process.py  def_varx.py  granger.py  kalman_filter.py  management.py
fitted_models/transformer/: transformer.py
models_tests/: acuration_metrick.py
monitoring/: __init__.py  docs.md  monitor_for_vps.py  news_manager.py
preprocessing/: combine_data.py  fixed_index_rename.py  fred_transform.py  handle_missing.py  log_return.py  loop_chained_imputation.py  stationarity_test.py
raw/: makro_raw.py  pair_raw.py
tests/: test_backtest_experiments.py  test_backtest_replay.py  test_combine_data.py  test_dummy_mt5_preload.py  test_engine_runner_integration.py  test_fit_models.py  test_loop_chained_imputation.py  test_monitor_bridge.py  test_pair_raw.py  test_parameter_config.py  test_preprocess_review.py  test_restored.py
vps_sync/: fitted_ensemble.pkl
