[package]
name        = "backtest_rs"
version     = "0.1.0"
edition     = "2021"
description = "High-performance intrabar backtest engine — Rust/Polars core with PyO3 bindings"
authors     = ["backtest-team"]

[lib]
name    = "backtest_rs"
crate-type = ["cdylib", "rlib"]   # cdylib → Python extension; rlib → benchmarks / tests

[features]
default     = ["python"]
python      = ["pyo3/extension-module", "dep:pyo3"]
bench-only  = []   # cargo bench --no-default-features --features bench-only

[dependencies]
# ── Polars (no Python dep; we work with pure Rust DataFrames) ────────────────
polars = { version = "0.39", default-features = false, features = [
    "lazy",          # LazyFrame API
    "parquet",       # optional: parquet I/O
    "dtype-full",    # all dtypes including Date/Datetime
    "strings",       # Utf8/String column ops
    "temporal",      # timestamp parsing
    "performant",    # SIMD + rayon
] }

# ── Parallelism ──────────────────────────────────────────────────────────────
rayon   = "1.10"

# ── Python bindings (optional feature) ──────────────────────────────────────
pyo3    = { version = "0.21", features = ["extension-module", "abi3-py38"], optional = true }

# ── Error handling ───────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── Serialisation (metadata JSON) ───────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Utils ────────────────────────────────────────────────────────────────────
hashbrown = { version = "0.14", features = ["rayon"] }  # faster HashMap
parking_lot = "0.12"     # fast RwLock for shared state

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "simulate_bench"
harness = false

[profile.release]
opt-level    = 3
lto          = "fat"
codegen-units= 1
panic        = "abort"
strip        = "debuginfo"

[profile.bench]
inherits  = "release"
debug     = true
